@@ -1,4 +1,5 @@
   - active 상태가 오락가락하는 버그 수정(https://github.com/opencloset/monitor/issues/15)
+  - save cookie file after success authentication
 
 v0.3.1    Fri Jun  5 13:40:42 2015 KST
   - Add style for context menu
